--- a/Notes/Notes.csproj
+++ b/Notes/Notes.csproj
@@ -53,6 +53,7 @@
     <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="NAudio.WaveFormRenderer" Version="2.0.0" />
     <PackageReference Include="NReco.VideoConverter" Version="1.2.1" />
+    <PackageReference Include="PdfPig" Version="0.1.11" />
     <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.8" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
