PDF: add strict tables mode and OCR fallback\n\n- Expose strictTables option on PdfProcessor APIs to preserve column alignment using gap-based tabbing.\n- Implement OCR fallback for image-only/scan PDFs via WinRT OCR after rendering with PdfPig+Skia.\n- Clean glyphs and deduplicate words to reduce noise.\n- Register Skia page factory for reliable page rendering.\n- Keep backward compatibility (defaults unchanged).

--- a/Notes/Notes.csproj
+++ b/Notes/Notes.csproj
@@ -17,8 +17,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <AssemblyTitle>AI Notes</AssemblyTitle>
     <AppxBundle>Never</AppxBundle>
-	  <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
-	  <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
     <WinMLDeployMSIXToOutput>true</WinMLDeployMSIXToOutput>
     <AppxOSMinVersionReplaceManifestVersion>false</AppxOSMinVersionReplaceManifestVersion>
@@ -67,6 +67,7 @@
     <PackageReference Include="NAudio.WaveFormRenderer" Version="2.0.0" />
     <PackageReference Include="NReco.VideoConverter" Version="1.2.1" />
     <PackageReference Include="PdfPig" Version="0.1.11" />
+    <PackageReference Include="PdfPig.Rendering.Skia" Version="0.1.11.4" />
     <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="9.0.9" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
